change form and modal window

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
             </label>
             <button type="submit" class="subscribe-button">
               Subscribe
-              <svg class="social-icon" width="24" height="24">
+              <svg class="social-icon-send" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
@@ -509,7 +509,7 @@
                 id="user-name"
                 class="modal-input"
               />
-              <svg class="modal-icon" width="18px" height="18px">
+              <svg class="modal-icon" width="18px" height="24px">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -523,7 +523,7 @@
                 id="user-tel"
                 class="modal-input"
               />
-              <svg class="modal-icon" width="18px" height="18px">
+              <svg class="modal-icon" width="18px" height="24px">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -537,12 +537,12 @@
                 id="user-email"
                 class="modal-input"
               />
-              <svg class="modal-icon" width="18px" height="18px">
+              <svg class="modal-icon" width="18px" height="24px">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
+          <div class="modal-field-textarea">
             <label for="user-comment" class="modal-label">Comment</label>
             <textarea
               name="user-comment"
@@ -554,12 +554,12 @@
           <div class="modal-checkbox">
             <input
               type="checkbox"
-              name="user-checkbox"
-              id="user-policy"
+              name="user-privacy"
+              id="user-privacy"
               class="modal-input-checkbox visually-hidden"
               value="true"
             />
-            <label for="user-policy" class="modal-check-text">
+            <label for="user-privacy" class="modal-check-text">
               <span class="modal-check-item">
                 <svg class="modal-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
