--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 id="user-name"
                 class="modal-input"
               />
-              <svg class="modal-icon" width="18px" height="24px">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -523,7 +523,7 @@
                 id="user-tel"
                 class="modal-input"
               />
-              <svg class="modal-icon" width="18px" height="24px">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -537,7 +537,7 @@
                 id="user-email"
                 class="modal-input"
               />
-              <svg class="modal-icon" width="18px" height="24px">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
