--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         </div>
         <div class="subscribe-content">
           <p class="subscribe-text">Subscribe</p>
-          <form action="" class="subscribe-form" name="form-subscription">
+          <form class="subscribe-form" name="form-subscription">
             <label class="subscribe-label">
               <input
                 class="subscribe-input"
@@ -499,7 +499,7 @@
           </svg>
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
-        <form action="" name="modal-form" class="modal-form">
+        <form name="modal-form" class="modal-form">
           <div class="modal-field">
             <label for="user-name" class="modal-label">Name</label>
             <div class="modal-input-wrapper">
